--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: numberpicker
+name: comxnumberpicker
 version: 2.1.1
 description: NumberPicker is a widget allowing user to choose numbers by scrolling spinners.
 homepage: https://github.com/MarcinusX/NumberPicker
